**Dark Mode** Fixes #98

--- a/src/css/paymentpage.scss
+++ b/src/css/paymentpage.scss
@@ -171,6 +171,7 @@
   }
 
   .mobile {
+    background-color: var(--accountBackground);
   }
 
   .desktop {
